// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton disabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "alignItems": "center",
      "cursor": "inherit",
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "28px",
        "borderBottomRightRadius": "28px",
        "borderTopLeftRadius": "28px",
        "borderTopRightRadius": "28px",
        "height": "52px",
        "justifyContent": "center",
        "marginBottom": "7px",
        "marginLeft": "7px",
        "marginRight": "7px",
        "marginTop": "7px",
        "msFlexAlign": "center",
        "msFlexPack": "center",
        "width": "52px",
      }
    }
  >
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.00)",
          "color": "rgba(0,0,0,0.32)",
          "fontFamily": "MaterialIcons",
          "fontSize": "24px",
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      
    </div>
  </div>
  <div
    className="css-text-76zvg2"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,0.32)",
      }
    }
  >
    edit
  </div>
</div>
`;

exports[`IconButton enabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "alignItems": "center",
      "cursor": "pointer",
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxPack": "center",
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "28px",
        "borderBottomRightRadius": "28px",
        "borderTopLeftRadius": "28px",
        "borderTopRightRadius": "28px",
        "height": "52px",
        "justifyContent": "center",
        "marginBottom": "7px",
        "marginLeft": "7px",
        "marginRight": "7px",
        "marginTop": "7px",
        "msFlexAlign": "center",
        "msFlexPack": "center",
        "width": "52px",
      }
    }
  >
    <div
      className="css-text-76zvg2"
      dir="auto"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.00)",
          "color": "rgba(40,44,52,1.00)",
          "fontFamily": "MaterialIcons",
          "fontSize": "24px",
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      
    </div>
  </div>
  <div
    className="css-text-76zvg2"
    dir="auto"
    style={
      Object {
        "color": "inherit",
      }
    }
  >
    edit
  </div>
</div>
`;
